# pamseek

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/data/: read.me
examples/: examples.ipynb
examples/data/: read.me
pamseek/: _init_.py  batch.py  batch2.py  compute.py  compute2.py  plot.py  plot2.py  speed_batch.py  utils.py
tests/: Q1 batch processing_v1.0.py  batch processing.py
