[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pamseek"
version = "0.1.0"
description = "A package for underwater PAM data analysis"
readme = "README.md"
authors = [
    {name = "Yang Y", email = "proyangy@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/yangyangMarine/pamseek"
"Bug Tracker" = "https://github.com/yangyangMarine/pamseek/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
